# aoc

./: .gitignore  README.md
2018/: Cargo.toml  run.sh
2018/src/: lib.rs
2019/: README.md  day04.bash
2019/day01.go/: day01.go
2019/day02/: Cargo.toml
2019/day02/src/: main.rs
2019/day03/: Cargo.toml
2019/day03/src/: main.rs
2019/day04/: Cargo.toml
2019/day04/src/: main.rs
2019/day05/: Cargo.toml
2019/day05/src/: main.rs
2019/day06/: Cargo.toml
2019/day06/src/: main.rs
2019/day07/: Cargo.toml
2019/day07/src/: main.rs
2019/day08/: Cargo.toml
2019/day08/src/: main.rs
2019/day09/: Cargo.toml
2019/day09/src/: main.rs
2019/day10/: Cargo.toml
2019/day10/src/: main.rs
2019/day11/: Cargo.toml
2019/day11/src/: main.rs
2019/day12/: Cargo.toml
2019/day12/src/: main.rs
2019/day13/: Cargo.toml
2019/day13/src/: main.rs
2019/day14/: Cargo.toml
2019/day14/src/: main.rs
2019/day15/: Cargo.toml
2019/day15/src/: main.rs
2019/day16/: Cargo.toml
2019/day16/src/: main.rs
2019/day17/: Cargo.toml
2019/day17/src/: main.rs
2019/day18/: Cargo.toml
2019/day18/src/: main.rs
2019/day19/: Cargo.toml  plot.gnuplot
2019/day19/src/: main.rs
2019/day20/: Cargo.toml
2019/day20/src/: main.rs
2019/day21/: Cargo.toml
2019/day21/src/: main.rs
2019/day22/: Cargo.toml
2019/day22/src/: main.rs
2019/day23/: Cargo.toml
2019/day23/src/: main.rs
2019/day24/: Cargo.toml
2019/day25/: Cargo.toml
2019/intcode/: Cargo.toml
2020/: Cargo.toml
2020/src/: lib.rs
day01/: Cargo.toml
day01/src/: main.rs
(+10 files in other folders)
