[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Joonas Koivunen <joonas.koivunen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nightly = ["packed_simd"]

[dependencies]
itertools = "0.9"
regex = "1.4"
lazy_static = "*"
indexmap = "1.6"
packed_simd = { version = "0.3.4", package = "packed_simd_2", optional = true }
